Update my web page.html

--- a/my web page.html
+++ b/my web page.html
@@ -7,6 +7,7 @@ My Web Page
 <h1>MY WEB PAGE</h1>
 name=<input type=text placeholder=enter your namne>
 email=<input type=email placeholder=enter your email>
+phone<input type = phone number placeholder=enter phone number>
 date of birth=<input=date>
 address=<textarea name=address rows="50" cols="30">
 <input type=submit>
