--- a/my web page.html
+++ b/my web page.html
@@ -11,5 +11,7 @@ phone<input type = phone number placeholder=enter phone number>
 date of birth=<input=date>
 address=<textarea name=address rows="50" cols="30">
 <input type=submit>
+<input type=reset>
 </body>
 </html>
+
