Update my web page.html

--- a/my web page.html
+++ b/my web page.html
@@ -12,6 +12,8 @@ date of birth=<input=date>
 address=<textarea name=address rows="50" cols="30">
 <input type=submit>
 <input type=reset>
+<input type=cancel>
 </body>
 </html>
+
 
