Update my web page.html

--- a/my web page.html
+++ b/my web page.html
@@ -3,6 +3,7 @@
 <title>
 My Web Page
 </title>
+</head>
 <body>
 <h1>MY WEB PAGE</h1>
 name=<input type=text placeholder=enter your namne>
@@ -15,5 +16,6 @@ address=<textarea name=address rows="50" cols="30">
 <input type=cancel>
 </body>
 </html>
+
 
 
